--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+.links-route {
+  margin: 20px 10px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 4px;
+  text-decoration: none;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.781);
+}
