estilizaçao com css

--- a/src/components/pokemon.css
+++ b/src/components/pokemon.css
@@ -1,4 +1,5 @@
 .pokemon {
+  background-color: rgba(144, 21, 21, 0.794);
   display: flex;
   align-items: center;
   justify-content: space-around;
